src/styles.css
@font-face {
  font-family: "Tiny5";
  src:
    url("fonts/Tiny5-Regular.woff2") format("woff2"),
    url("fonts/Tiny5-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

* {
  margin: 0;
  padding: 0;
  list-style: none;
  background: none;
  font-family: "Tiny5";
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 20px;
  background-color: #555b6e;
}

.home-screen-container {
  padding-top: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 25px;
}

.home-container {
  position: relative;
  display: flex;
  gap: 20px;
}

h1 {
  font-size: 3rem;
  padding: 5px 10px 5px 10px;
}

button,
.info,
h2 {
  font-size: 2rem;
}

.info {
  padding: 10px;
}

button {
  margin-top: 15px;
  padding: 8px;
  transition: transform 0.3s;
  background-color: #b1a7a6;
  box-shadow: 0px 0px 4px grey;
}

body > h1:hover,
button:hover {
  cursor: pointer;
  background-color: #c5c3c6;
  transition: transform 0.3s;
  transform: translate(2px, 2px);
}

button:focus {
  background-color: #555b6e;
}

.cell:hover {
  opacity: 0.8;
  transform: scale(1.1);
  cursor: crosshair;
}

.player-name {
  display: flex;
  justify-self: center;
  padding: 10px;
}

.container {
  padding: 25px;
  display: flex;
  gap: 50px;
  position: relative;
}

.cell {
  min-width: 35px;
  min-height: 35px;
  border-radius: 50%;
  margin: 2px;
  background-color: #b1a7a6;
}

.main-graph-container {
  display: flex;
  gap: 20px;
}

.graphs {
  display: flex;
  gap: 35px;
  padding: 25px;
}

.graph-container {
  background-color: #2b2d42;
  justify-self: center;
  padding: 50px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  max-height: 120px;
  max-width: 120px;
  gap: 12px;
  border-radius: 50%;
}

.graph-title {
  max-width: 120px;
  color: #b1a7a6;
  align-self: center;
  justify-self: center;
  font-size: 1.5rem;
}

.graph-cell {
  min-height: 10px;
  min-width: 10px;
  border-radius: 50%;
  margin: 2px;
  background-color: #b1a7a6;
}

.row {
  display: flex;
}

.ship6 {
  background-color: #81b29a;
}

.ship5 {
  background-color: #fcbf49;
}

.ship4 {
  background-color: #f77f00;
}

.ship3 {
  background-color: #d62828;
}

.ship2 {
  background-color: #457b9d;
}

.hidden {
  display: none;
}

/* HTML: <div class="loader"></div> */
.loader {
  top: 50%;
  left: 220px;
  width: 20px;
  aspect-ratio: 1;
  border-radius: 50%;
  background: #000;
  box-shadow: 0 0 0 0 #0004;
  animation: l2 1.5s infinite linear;
  position: absolute;
}
.loader:before,
.loader:after {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: inherit;
  box-shadow: 0 0 0 0 #0004;
  animation: inherit;
  animation-delay: -0.5s;
}
.loader:after {
  animation-delay: -1s;
}
@keyframes l2 {
  100% {
    box-shadow: 0 0 0 40px #0000;
  }
}

/* HTML: <div class="loader"></div> */
.loader2 {
  width: 120px;
  height: 20px;
  background: linear-gradient(#000 0 0) left/20px 20px no-repeat #ddd;
  animation: l1 1s infinite linear;
}
@keyframes l1 {
  50% {
    background-position: right;
  }
}

/* HTML: <div class="loader"></div> */
.loader3 {
  margin-top: 80%;
  width: fit-content;
  font-weight: bold;
  font-size: 35px;
  overflow: hidden;
}
.loader3::before {
  content: "Switching Player";
  color: #0000;
  text-shadow: 0 0 0 #2b2d42,19ch 0 0 #b1a7a6,38ch 0 0 #2b2d42;
  background: linear-gradient(90deg,#0000 calc(100%/3),#2b2d42 0 calc(2*100%/3),#0000 0) left/300% 100%;
  animation: l23 2s infinite;
}

@keyframes l23{
  50% {background-position: center;text-shadow: -19ch 0 0 #2b2d42,    0 0 0 #b1a7a6,19ch 0 0 #2b2d42}
  100%{background-position: right ;text-shadow: -38ch 0 0 #2b2d42,-19ch 0 0 #b1a7a6,   0 0 0 #2b2d42}
}

.loader4 {
  margin-top: 80%;
  width: fit-content;
  font-weight: bold;
  font-size: 35px;
  overflow: hidden;
}
.loader4::before {
  content: "Restarting Game";
  color: #0000;
  text-shadow: 0 0 0 #2b2d42,16ch 0 0 #b1a7a6,32ch 0 0 #2b2d42;
  background: linear-gradient(90deg,#0000 calc(100%/3),#2b2d42 0 calc(2*100%/3),#0000 0) left/300% 100%;
  animation: l23 2s infinite;
}

@keyframes l23{
  50% {background-position: center;text-shadow: -16ch 0 0 #2b2d42,    0 0 0 #b1a7a6,16ch 0 0 #2b2d42}
  100%{background-position: right ;text-shadow: -32ch 0 0 #2b2d42,-16ch 0 0 #b1a7a6,   0 0 0 #2b2d42}
}

